@@ -35,8 +35,6 @@ ask. <P>
 <ul>
   <li><a href="ACE-categories.html">Class Categories</a> - Listing of some of the classes
       in ACE.
-  <li>ACE Inheritance Tree <a href="ACE-inheritance.pdf">[pdf]</a> <a href=
-      "ACE-inheritance.ps.gz">[ps.gz]</a>
   <li><a href="ACE-subsets.html">ACE Subsets</a> - Outline of some of our ideas
       for subsetting the ACE library.
 </ul>
